# Picko

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  docker.env
.railway/: backend.toml  celery.toml  frontend.toml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251216_1531_dd1fb5a9ac05_.py  20251220_1345_9dfcb9cfa576_.py  2025_12_14_1240-48a429ba019d_initial.py  2025_12_14_2021-aa17f25c1884_add_self_registration.py  2025_12_14_2052-d4a353574749_add_participant_access_token.py
backend/source/: app.py  celery_app.py  cli.py  settings.py
backend/source/database/: connection.py  models.py  operations.py
backend/source/endpoints/: draw.py  event.py  participant.py
backend/source/tasks/: __init__.py  draw.py
backend/source/utils/: datetime.py  distribution.py  postman.py
backend/source/utils/templates/: christmas.html
backend/source/utils/templates/christmas/: en.html  pl.html  subject.json
backend/tests/: conftest.py
frontend/: .env.example  .prettierignore  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/messages/: en.json  pl.json
frontend/project.inlang/: project_id
frontend/src/: app.html
frontend/src/lib/: constants.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: ActionLink.svelte  Badge.svelte  Button.svelte  Card.svelte  Chip.svelte  CopyButton.svelte  Footer.svelte  FormError.svelte  FormLabel.svelte  Header.svelte  IconButton.svelte  Input.svelte  LanguageSwitcher.svelte  PageLayout.svelte  (+8 more)
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
(+45 files in other folders)
